# agentgit

./: .gitignore  AGENT_PLUGINS.md  CLAUDE.md  LICENSE  PLAN-web-viewer.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: design-session-structure.md
docs/research/: jj-adoption-spike.md
docs/spikes/: lazygit-tui-spike.md
shell-completion/: README.md  agentgit.bash  agentgit.zsh
src/agentgit/: __init__.py  adaptive_model.py  ai_commit.py  cli.py  config.py  core.py  enhance.py  git_builder.py  interactive_model.py  living_model.py  mental_model.py  pager.py  plugins.py  settings.py  url_resolver.py  utils.py  watcher.py  web_sessions.py
src/agentgit/cmd/: __init__.py  blame.py
src/agentgit/enhancers/: __init__.py  claude_cli.py  claude_code.py  llm.py  mental_model.py  rules.py  static_analysis.py
src/agentgit/formats/: __init__.py  claude_code.py  claude_code_web.py  codex.py
src/agentgit/viewer/: __init__.py  data.py  server.py
tests/: __init__.py  test_ai_enhancement.py  test_alazygit.py  test_api.py  test_claude_code.py  test_cli.py  test_config.py  test_core.py  test_enhancement.py  test_git_builder.py  test_pager.py  test_pager_tools.py  test_plugins.py  test_reframe.py  test_repo_id 2.py  test_repo_id.py  test_static_analysis.py  test_url_resolver.py  test_utils.py  test_watcher.py
tests/cmd/: test_blame.py
tests/formats/: test_claude_code_web_parse.py
tests/web_sessions/: __init__.py  test_web_sessions.py
viewer-app/: index.html  package.json  vite.config.js
viewer-app/src/: App.svelte  main.js
(+11 files in other folders)
